Bug 1318926 - constant-fold asm.js RSh expressions again. r=nbp